--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MaterialThemeActionbar">
-        <activity android:name=".FormTemuan"
+        <activity android:name=".Korektif"></activity>
+        <activity android:name=".BottomsheetAsset" />
+        <activity
+            android:name=".FormTemuan"
             android:launchMode="singleTop"
-            android:parentActivityName=".IsiInspeksi"/>
+            android:parentActivityName=".IsiInspeksi" />
         <activity
             android:name=".IsiInspeksi"
             android:launchMode="singleTop"
